--- a/HelixTest(Android)/app/src/main/AndroidManifest.xml
+++ b/HelixTest(Android)/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:name=".GlobalIP"
         android:allowBackup="true"
-        android:icon="@mipmap/opros1"
+        android:icon="@mipmap/lit1"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" >
         <activity
